# ZIVPN-Turbo-Reborn

./: build.gradle.kts
.github/workflows/: zivpn-build.yml  zivpn-release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/kr328/clash/: ExternalControlActivity.kt  MainActivity.kt  MainApplication.kt  ProfilesActivity.kt  ZivpnSettingsActivity.kt
core/src/foss/golang/: go.mod
core/src/main/cpp/: CMakeLists.txt
core/src/main/golang/: go.mod
design/src/main/java/com/github/kr328/clash/design/: MainDesign.kt  ZivpnSettingsDesign.kt
design/src/main/res/layout/: design_main.xml
design/src/main/res/values/: strings.xml
design_kotlin_backup_unused/: SettingsDesign.kt
layout_backup_unused/: design_settings.xml
service/src/main/: AndroidManifest.xml
service/src/main/java/com/github/kr328/clash/service/: TunService.kt  ZivpnManager.kt
service/src/main/java/com/github/kr328/clash/service/clash/module/: ConfigurationModule.kt  SuspendModule.kt
service/src/main/java/com/github/kr328/clash/service/store/: ZivpnStore.kt
